--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/views/Main.storyboard
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/views/Main.storyboard
@@ -85,6 +85,45 @@
             </objects>
             <point key="canvasLocation" x="-319" y="790"/>
         </scene>
+        <!--FeedTableViewController-->
+        <scene sceneID="uJr-IU-hjp">
+            <objects>
+                <viewController title="FeedTableViewController" id="SWA-yf-kQY" customClass="FeedTableViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KTM-o4-wdf"/>
+                        <viewControllerLayoutGuide type="bottom" id="JoL-bP-aWb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Cm0-Xt-ghC">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="487"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="gHW-kj-eSX">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="487"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="SWA-yf-kQY" id="tui-ag-JOj"/>
+                                    <outlet property="delegate" destination="SWA-yf-kQY" id="KCa-Ae-GAY"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="gHW-kj-eSX" secondAttribute="trailing" constant="-16" id="4ai-hr-uww"/>
+                            <constraint firstItem="gHW-kj-eSX" firstAttribute="leading" secondItem="Cm0-Xt-ghC" secondAttribute="leadingMargin" constant="-16" id="Kuo-SP-Vuh"/>
+                            <constraint firstItem="JoL-bP-aWb" firstAttribute="top" secondItem="gHW-kj-eSX" secondAttribute="bottom" id="uK9-HS-k9p"/>
+                            <constraint firstItem="gHW-kj-eSX" firstAttribute="top" secondItem="KTM-o4-wdf" secondAttribute="bottom" id="xAj-kN-1hY"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" selectedImage="twitter" systemItem="search" id="dth-qL-o1J"/>
+                    <connections>
+                        <outlet property="feedTableView" destination="gHW-kj-eSX" id="MBJ-f6-mtD"/>
+                        <segue destination="g8c-6b-oU9" kind="show" id="FyD-B4-oMg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VZT-oA-OOw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="372" y="790"/>
+        </scene>
         <!--Discover Screen-->
         <scene sceneID="RRn-VI-kmy">
             <objects>
@@ -122,31 +161,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OW8-hQ-NGl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1809" y="785"/>
-        </scene>
-        <!--Artist Feed-->
-        <scene sceneID="JWA-Tt-J6s">
-            <objects>
-                <tableViewController id="keD-Cb-FhT" userLabel="Artist Feed" customClass="FeedTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="301" sectionHeaderHeight="22" sectionFooterHeight="22" id="77N-T3-S2R">
-                        <rect key="frame" x="0.0" y="64" width="600" height="487"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <connections>
-                            <outlet property="dataSource" destination="keD-Cb-FhT" id="WTU-Tb-iKv"/>
-                            <outlet property="delegate" destination="keD-Cb-FhT" id="jcq-5N-VuC"/>
-                        </connections>
-                    </tableView>
-                    <tabBarItem key="tabBarItem" title="" image="Start" id="W8R-Ic-JlW"/>
-                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="P4I-m1-IBj">
-                        <autoresizingMask key="autoresizingMask"/>
-                    </refreshControl>
-                    <connections>
-                        <segue destination="g8c-6b-oU9" kind="show" identifier="showScanResult" id="F5f-SD-5lP"/>
-                    </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9Rn-OU-fie" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="397" y="790"/>
         </scene>
         <!--Artist Detail View Controller-->
         <scene sceneID="T5I-QS-QvV">
@@ -187,7 +201,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="g8c-6b-oU9" kind="show" identifier="showScanResult" id="TM5-d9-Bxu"/>
-                        <segue destination="keD-Cb-FhT" kind="relationship" relationship="viewControllers" id="iEI-Ey-ObK"/>
+                        <segue destination="SWA-yf-kQY" kind="relationship" relationship="viewControllers" id="43q-SU-blw"/>
                         <segue destination="WdT-Q6-mb4" kind="relationship" relationship="viewControllers" id="lPr-2U-FsY"/>
                         <segue destination="evs-Oh-Jun" kind="relationship" relationship="viewControllers" id="7Z6-7b-f6d"/>
                         <segue destination="wda-of-8Qb" kind="relationship" relationship="viewControllers" id="czG-kt-2ns"/>
@@ -320,10 +334,10 @@
     <resources>
         <image name="Map" width="31" height="31"/>
         <image name="QR" width="30" height="30"/>
-        <image name="Start" width="30" height="30"/>
         <image name="info" width="32" height="32"/>
+        <image name="twitter" width="52" height="37"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="F5f-SD-5lP"/>
+        <segue reference="FyD-B4-oMg"/>
     </inferredMetricsTieBreakers>
 </document>
